atualização projeto gini

--- a/Aulas/7-modelo_regressao_beta.html
+++ b/Aulas/7-modelo_regressao_beta.html
@@ -523,7 +523,8 @@ temp  1.373446  1        1.171941</code></pre>
 <section id="referências" class="slide level2">
 <h2>Referências</h2>
 <p><br></p>
-<p>Ferrari, S. L. P., &amp; Cribari-Neto, F. (2004). Beta regression for modelling rates and proportions. Journal of Applied Statistics, 31(7), 799-815.</p>
+<p>Ferrari, S. L. P., &amp; Cribari-Neto, F. (2004). Beta regression for modelling rates and proportions. Journal of Applied Statistics, 31(7), 799-815. <a href="chrome-extension://efaidnbmnnnibpcajpcglclefindmkaj/https://www.ime.usp.br/~sferrari/beta.pdf">Link do artigo da regressão beta</a></p>
+<p>Cribari-Neto, F. and Zeileis, A. 2010. Beta Regression in R. Journal of Statistical Software 34(2). <a href="www.jstatsoft.org/index.php/jss/article/download/v034i02/378">Link do pacote betareg</a></p>
 <div class="quarto-auto-generated-content">
 <p><img src="Marca_UEPB.png" class="slide-logo"></p>
 <div class="footer footer-default">
